--- a/problems/数组理论基础.md
+++ b/problems/数组理论基础.md
@@ -123,3 +123,60 @@ public static void test_arr() {
 <a href="https://programmercarl.com/other/kstar.html" target="_blank">
   <img src="../pics/网站星球宣传海报.jpg" width="1000"/>
 </a>
+
+ 
+
+
+
+## Yiye Notes - Python List Operations
+
+### Key Takeaways:
+
+**How it works:**
+
+- Unlike C++ where the list elements are stored in continuous RAM addresses, python lists are **dynamic lists**, where the continuous memory stores the **references (pointers)** to the actual list elements. That is also why the list elements in python can be of different types rather than the same type as in C++.
+- This means that the list elements are NOT stored in continuous memories.
+
+**Complexity of `.append` operation:**
+
+- **Best Case:** O(1)O(1)O(1) when no resizing is required.
+- **Worst Case:** O(N)O(N)O(N) when resizing occurs.
+- **Amortized Complexity:** O(1)O(1)O(1) on average over a large number of appends.
+
+
+
+### Complexity of `.append` operation
+
+1. **Normal Case (No Resize Needed):**
+
+- Python lists are implemented as **dynamic arrays**, and they are designed to allocate extra memory in advance to minimize the frequency of resizing.
+
+- When there is enough preallocated space in the list, appending an element simply involves:
+
+  1. Storing the reference to the new element in the next available slot.
+  2. Updating the internal list size counter.
+
+  This operation is 
+
+  O(1)O(1)O(1)
+
+   since no resizing or copying is needed.
+
+2. **When Resize is Required:**
+
+- If the list runs out of its preallocated space, Python performs a 
+
+  resize operation
+
+  :
+
+  1. Allocates a new block of memory, typically **larger than the old block** (to accommodate future growth).
+  2. Copies all existing references to the new block (this is O(N)O(N)O(N), where NNN is the number of elements in the list).
+  3. Frees the old block.
+  4. Adds the new element to the list.
+
+3. **Amortized Complexity of Append:**
+
+- Although resizing is O(N)O(N)O(N), it does not occur on every append. Instead, Python increases the list capacity by a growth factor (typically around 1.125x or 1.5x in CPython).
+- Because of this exponential growth, the cost of copying is spread out over many `append` operations.
+- **On average**, the `append` operation is $O(1)$ **amortized**.
