--- a/problems/二叉树的迭代遍历.md
+++ b/problems/二叉树的迭代遍历.md
@@ -115,7 +115,7 @@ public:
 
 ```
 
-### 后序遍历（迭代法）
+## 后序遍历（迭代法）- 反转技巧
 
 再来看后序遍历，先序遍历是中左右，后序遍历是左右中，那么我们只需要调整一下先序遍历的代码顺序，就变成中右左的遍历顺序，然后在反转result数组，输出的结果顺序就是左右中了，如下图：
 
@@ -761,3 +761,4 @@ public IList<int> PostorderTraversal(TreeNode root)
 <a href="https://programmercarl.com/other/kstar.html" target="_blank">
   <img src="../pics/网站星球宣传海报.jpg" width="1000"/>
 </a>
+
