--- a/problems/二叉树的统一迭代法.md
+++ b/problems/二叉树的统一迭代法.md
@@ -5,7 +5,13 @@
 <p align="center"><strong><a href="./qita/join.md">参与本项目</a>，贡献其他语言版本的代码，拥抱开源，让更多学习算法的小伙伴们受益！</strong></p>
 
 
-> 统一写法是一种什么感觉
+# Yiye Overview
+
+The idea is to use a NULL element to indicate that the previous element can be printed.
+
+Otherwise (w/o NULL), the node is just added to be checked, not to be printed.
+
+
 
 # 二叉树的统一迭代法
 
@@ -840,3 +846,4 @@ public IList<int> PostorderTraversal(TreeNode root)
 <a href="https://programmercarl.com/other/kstar.html" target="_blank">
   <img src="../pics/网站星球宣传海报.jpg" width="1000"/>
 </a>
+
