--- a/problems/0102.二叉树的层序遍历.md
+++ b/problems/0102.二叉树的层序遍历.md
@@ -15,16 +15,20 @@
 
 学会二叉树的层序遍历，可以一口气打完以下十题：
 
-* [102.二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
-* [107.二叉树的层次遍历II](https://leetcode.cn/problems/binary-tree-level-order-traversal-ii/)
-* [199.二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/)
-* [637.二叉树的层平均值](https://leetcode.cn/problems/average-of-levels-in-binary-tree/)
-* [429.N叉树的层序遍历](https://leetcode.cn/problems/n-ary-tree-level-order-traversal/)
-* [515.在每个树行中找最大值](https://leetcode.cn/problems/find-largest-value-in-each-tree-row/)
-* [116.填充每个节点的下一个右侧节点指针](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node/)
-* [117.填充每个节点的下一个右侧节点指针II](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node-ii/)
-* [104.二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
-* [111.二叉树的最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/)
+- [ ] [102M.二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
+
+- [ ] [107M.二叉树的层次遍历II](https://leetcode.cn/problems/binary-tree-level-order-traversal-ii/)
+
+- [ ] [199M.二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/)
+
+- [ ] [637E.二叉树的层平均值](https://leetcode.cn/problems/average-of-levels-in-binary-tree/)
+
+* [ ] [429M.N叉树的层序遍历](https://leetcode.cn/problems/n-ary-tree-level-order-traversal/)
+* [ ] [515M.在每个树行中找最大值](https://leetcode.cn/problems/find-largest-value-in-each-tree-row/)
+* [ ] [116M.填充每个节点的下一个右侧节点指针](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node/)
+* [ ] [117M.填充每个节点的下一个右侧节点指针II](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node-ii/)
+* [ ] [104E.二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+* [ ] [111E.二叉树的最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/)
 
 
 
@@ -3556,4 +3560,3 @@ impl Solution {
 <a href="https://programmercarl.com/other/kstar.html" target="_blank">
   <img src="../pics/网站星球宣传海报.jpg" width="1000"/>
 </a>
-
